--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.0.0-rc.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "angular-bootstrap-md": "^7.5.4",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
