--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-mdc/web": "^2.0.1",
     "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^8.0.1",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
-    "@angular/material": "^8.0.1",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@w11k/angular-sticky-things": "^1.1.2",
     "angular-bootstrap-md": "^7.5.4",
+    "angular-gtag": "^1.0.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
