--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-mdc/web": "^2.0.1",
+    "@angular-mdc/web": "1.0.3",
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@material/animation": "^3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@w11k/angular-sticky-things": "^1.1.2",
     "angular-bootstrap-md": "^7.5.4",
