--- a/angular.json
+++ b/angular.json
@@ -29,11 +29,14 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/angular-bootstrap-md/scss/mdb-free.scss",
+              "src/assets/scripts/ns/nerveSlider.min.css",
               "src/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/assets/scripts/ns/resources/jquery-ui-1.10.2.min.js",
+              "src/assets/scripts/ns/jquery.nerveSlider.js"
             ],
             "es5BrowserSupport": true
           },
