--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ngx-gallery": "^5.10.0",
+    "ngx-infinite-scroll": "^7.2.0",
     "primeicons": "^1.0.0",
     "primeng": "^8.0.0",
     "rxjs": "~6.5.2",
