--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/angular-bootstrap-md/scss/mdb-free.scss",
               "src/assets/scripts/ns/nerveSlider.min.css",
