--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-gtag": "^1.0.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-gallery": "^5.10.0",
