--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ngx-auth": "^5.1.0",
     "ngx-gallery": "^5.10.0",
     "ngx-infinite-scroll": "^7.2.0",
     "primeicons": "^1.0.0",
